# maestro

./: PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: dev.sh  e2e-zrythm.sh
sidecar/: pyproject.toml  requirements.txt
sidecar/maestro_sidecar/: config.py  main.py
sidecar/maestro_sidecar/api/: routes.py  schemas.py
sidecar/maestro_sidecar/db/: client.py  collections.py  indexer.py
sidecar/maestro_sidecar/embeddings/: audio_processor.py  chroma_function.py  clap_embedder.py
sidecar/maestro_sidecar/search/: similarity_search.py  text_search.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  params.rs  search.rs  tracks.rs  transport.rs
src-tauri/src/engine/: mock.rs  mod.rs  state.rs  zrythm.rs
src-tauri/src/osc/: adapter.rs  client.rs  listener.rs  messages.rs  mod.rs  state.rs
src-tauri/src/sidecar/: api.rs  manager.rs
src/lib/api/: search.ts  tracks.ts  transport.ts
src/lib/components/engine/: CustomParams.svelte
src/lib/components/layout/: StatusBar.svelte
src/lib/components/tracks/: TrackList.svelte  TrackRow.svelte
src/lib/components/transport/: TransportBar.svelte
src/lib/stores/: connection.ts  tracks.ts  transport.ts
src/lib/types/: ableton.ts  engine.ts  search.ts  skills.ts
