[project]
name = "maestro-sidecar"
version = "0.1.0"
description = "Maestro search engine sidecar — ChromaDB + CLAP audio embeddings"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "chromadb>=0.6",
    "laion-clap>=1.1",
    "librosa>=0.10",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "soundfile>=0.12",
    "watchdog>=5.0",
]

[project.scripts]
maestro-sidecar = "maestro_sidecar.main:run"
